# enterprise-rag-vector-platform

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/api/: ingestion.py  router.py
app/api/endpoints/: ingestion.py  models.py  ws_chat.py
app/core/: config.py  logger.py  metrics.py
app/rag_core/chain/: rag_chain.py
app/rag_core/embeddings/: embedder.py  tokenizer.py
app/rag_core/ingestion/: chunker.py  loader.py
app/rag_core/llm/: llm_registry.py  nvidia_client.py
app/rag_core/prompt/: prompt_builder.py
app/rag_core/retrieval/: retriever.py
app/rag_core/vectorstore/: pinecone_client.py
app/service/: chat_service.py  ingestion_service.py
app/utils/: file_utils.py  rag_utils.py
scripts/: ingest_documents.py
